# gcp-marketplace-minddash-rag-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: api.py
app/database/: engine.py  up.py
app/models/: convmodels.py  query.py  quote_models.py  uploaded_document.py
app/tools/: conversations.py  middleware.py  run.py  storage.py
